--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,76 +1,143 @@
 [build-system]
-requires = ["poetry_core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.poetry]
+[project]
 name = "pytest-helm-charts"
 version = "1.3.2"
 description = "A plugin to provide different types and configs of Kubernetes clusters that can be used for testing."
-authors = ["Łukasz Piątkowski <lukasz@giantswarm.io>"]
-license = "Apache-2.0"
-repository = "https://github.com/giantswarm/pytest-helm-charts"
+authors = [{ name = "Łukasz Piątkowski", email = "lukasz@giantswarm.io" }]
+requires-python = ">=3.10, <4"
 readme = "README.md"
+license = "Apache-2.0"
 keywords = ["kubernetes", "helm", "chart"]
-include = ["CHANGELOG.md", "DCO"]
-packages = [{ include = "pytest_helm_charts/**/*.py" }]
 classifiers = [
-  'Development Status :: 4 - Beta',
-  'Framework :: Pytest',
-  'Intended Audience :: Developers',
-  'Topic :: Software Development :: Testing',
-  'Programming Language :: Python',
-  'Programming Language :: Python :: 3',
-  'Programming Language :: Python :: 3.10',
-  'Programming Language :: Python :: 3.11',
-  'Programming Language :: Python :: 3.12',
-  'Programming Language :: Python :: 3.13',
-  'Programming Language :: Python :: Implementation :: CPython',
-  'Operating System :: POSIX :: Linux',
-  'License :: OSI Approved :: Apache Software License',
+  "Development Status :: 4 - Beta",
+  "Framework :: Pytest",
+  "Intended Audience :: Developers",
+  "Topic :: Software Development :: Testing",
+  "Programming Language :: Python",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
+  "Programming Language :: Python :: 3.14",
+  "Programming Language :: Python :: Implementation :: CPython",
+  "Operating System :: POSIX :: Linux",
+  "License :: OSI Approved :: Apache Software License",
+]
+dependencies = [
+  "pytest>=8.0.0,<9",
+  "pykube-ng>=23.6,<24",
+  "Deprecated>=1.2.13,<2",
 ]
 
-[tool.poetry.plugins] # Optional super table
+[project.optional-dependencies]
+docs = ["mkdocs>=1.2.3,<2", "mkapi>=1.0.14,<2"]
 
-[tool.poetry.plugins."pytest11"]
+[project.urls]
+Repository = "https://github.com/giantswarm/pytest-helm-charts"
+
+[project.entry-points."pytest11"]
 "helm-charts" = "pytest_helm_charts.plugin"
 
-[tool.poetry.dependencies]
-python = "^3.10"
-pytest = "^9.0.0"
-pykube-ng = ">=23.6,<24"
-mkdocs = { version = "^1.2.3", optional = true }
-mkapi = { version = "^1.0.14", optional = true }
-Deprecated = "^1.2.13"
+[dependency-groups]
+dev = [
+  "mypy",
+  "pre-commit",
+  "pytest",
+  "pytest-cov",
+  "pytest-mock",
+  "tox>=4.0.0,<5",
+]
 
-[tool.poetry.dev-dependencies]
-autopep8 = "^2.0.0"
-tox = "<5"
-pytest-mock = "^3.6.1"
-flake8 = "^7.0.0"
-mypy = "^1.0"
-pytest-cov = "^7.0.0"
-bandit = "^1.7.4"
-black = "^25.0.0"
-pre-commit = "^4.0.0"
+[tool.hatch.build.targets.sdist]
+include = ["pytest_helm_charts/**/*.py", "CHANGELOG.md", "DCO"]
 
-[tool.poetry.extras]
-docs = ["mkdocs", "mkapi"]
+[tool.hatch.build.targets.wheel]
+include = ["pytest_helm_charts/**/*.py", "CHANGELOG.md", "DCO"]
 
-[tool.black]
+[tool.ruff]
+# Exclude a variety of commonly ignored directories.
+exclude = [
+  ".bzr",
+  ".direnv",
+  ".eggs",
+  ".git",
+  ".git-rewrite",
+  ".hg",
+  ".ipynb_checkpoints",
+  ".mypy_cache",
+  ".nox",
+  ".pants.d",
+  ".pyenv",
+  ".pytest_cache",
+  ".pytype",
+  ".ruff_cache",
+  ".svn",
+  ".tox",
+  ".venv",
+  ".vscode",
+  "__pypackages__",
+  "_build",
+  "buck-out",
+  "build",
+  "dist",
+  "node_modules",
+  "site-packages",
+  "venv",
+]
+# Same as Black.
 line-length = 120
-target-version = ['py310', 'py311', 'py312', 'py313']
-include = '\.pyi?$'
-exclude = '''
-/(
-    \.eggs
-  | \.git
-  | \.hg
-  | \.mypy_cache
-  | \.tox
-  | \.venv
-  | _build
-  | buck-out
-  | build
-  | dist
-)/
-'''
+indent-width = 4
+
+[tool.ruff.lint]
+# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
+# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
+# McCabe complexity (`C901`) by default.
+select = ["E4", "E7", "E9", "F"]
+ignore = []
+
+# Allow fix for all enabled rules (when `--fix`) is provided.
+fixable = ["ALL"]
+unfixable = []
+
+# Allow unused variables when underscore-prefixed.
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+
+[tool.ruff.format]
+# Like Black, use double quotes for strings.
+quote-style = "double"
+
+# Like Black, indent with spaces, rather than tabs.
+indent-style = "space"
+
+# Like Black, respect magic trailing commas.
+skip-magic-trailing-comma = false
+
+# Like Black, automatically detect the appropriate line ending.
+line-ending = "auto"
+
+# Enable auto-formatting of code examples in docstrings. Markdown,
+# reStructuredText code/literal blocks and doctests are all supported.
+#
+# This is currently disabled by default, but it is planned for this
+# to be opt-out in the future.
+docstring-code-format = false
+
+# Set the line length limit used when formatting code snippets in
+# docstrings.
+#
+# This only has an effect when the `docstring-code-format` setting is
+# enabled.
+docstring-code-line-length = "dynamic"
+
+[tool.tox]
+requires = ["tox-uv>=1.0"]
+env_list = ["py310", "py311", "py312", "py313", "py314"]
+
+[tool.tox.env_run_base]
+deps = ["pytest"]
+commands = [["pytest", "tests/", "--import-mode", "importlib"]]
+runner = "uv-venv-lock-runner"
